<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_of_expenses">Expense List</string>
    <string name="generate">Generate Expenses</string>
    <string name="empty_message">Welcome To Expense Manager</string>
    <string name="expenseName">Expense Name </string>
    <string name="amount">Amount </string>
    <string name="add"> ADD </string>
    <string name="cancel"> CANCEL </string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="location">Location</string>
    <string name="mode">Mode</string>
    <string name="importSms">Would you like import older messages from your phone? </string>
    <string name="addExpense">ADD EXPENSE</string>
    <string name="pick_date">Pick Date</string>
    <string name="title_activity_get_configuration">Get Configuration</string>
    <string name="title_activity_select_bank">Select Bank</string>
    <string name="proceed">Proceed</string>
    <string name="chooseBankName">Choose Bank Name to track expenses :</string>
    <string name="chooseGoogleAccount">Choose Google Account to be used :</string>
</resources>
