<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#16711681">
    <!-- The main content view -->
    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <ScrollView
                android:id="@+id/layout"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="5dip"
                android:scrollbarStyle="outsideInset"
                android:fillViewport="true">

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/main_table"
                     android:scrollbars="vertical"
                     android:stretchColumns="1">
        </TableLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="310dp"
                  android:layout_height="match_parent"
                  android:layout_gravity="right"
                  android:id="@+id/right_drawer"
                  android:divider="@android:color/transparent"
                  android:dividerHeight="0dp"
                  android:background="#111">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addExpense"
                android:id="@+id/addExpense"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAlignment="center"/>

        <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/expenseName"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/expenseName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"/>

        <EditText
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/amountAddForm"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/amount"
                android:textAlignment="center"
                android:textColor="#FFFFFF"/>

        <EditText
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateAddForm"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/date"
                android:autoText="false"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                />


        <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/locationAddForm"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/location"
                android:textAlignment="center"
                android:textColor="#FFFFFF"/>


        <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/modeAddForm"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/mode"
                android:textAlignment="center"
                android:textColor="#FFFFFF"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                android:id="@+id/addCancelLayout">

            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:id="@+id/addButton"
                    android:layout_gravity="left|center_vertical"
                    />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>